'添加单例模式实现方式'