@@ -8,7 +8,7 @@ package com.studyinghome.abstractfactory;
  */
 
 public abstract class AbstractHumanFactory implements HumanFactory {
-    /*
+    /**
      * 给定一个性别人类，创建一个人类出来专业术语是产生产品等级
      */
     protected Human createHuman(HumanEnum humanEnum) {
@@ -18,7 +18,7 @@ public abstract class AbstractHumanFactory implements HumanFactory {
             try {
                 //直接产生一个实例
                 human = (Human)
-                        Class.forName(humanEnum.getValue()).newInstance();
+                        Class.forName(humanEnum.getValue()).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 //因为使用了enum，这个种异常情况不会产生了，除非你的enum有问题；
                 e.printStackTrace();
